tg_parser/tests/invalid/gate_two_outputs.tg
gate BadGateOut(in a; out y, z) {
    pmos drain=y, gate=a, source=VDD;
}
